--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lucid Tech LLC</title>
+    <meta name="description" content="Professional lawn care and snow removal services. AAAME Lawn & Snow LLC provides expert lawn maintenance, snow plowing, and seasonal property care." />
+    <title>AAAME Lawn & Snow LLC - Professional Lawn Care & Snow Removal Services</title>
   </head>
   <body>
     <div id="root"></div>
